[project]
name = "robotnotice_package"
version = "0.0.1"
authors = [
  { name="Yathon", email="1134791004@qq.com" },
]
description = "提供方便通用的钉钉群和企业微信群机器人消息通知接口"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE Version 3, 29 June 2007",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yathon/RobotNotice"
"Bug Tracker" = "https://github.com/yathon/RobotNotice/issues"